small changes in div spaces

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; Desenvolvido por <a href="https://github.com/CaioNT" target="_blank" rel="noopener">Caio Nunes.</a></p>
+            <p>&copy; Desenvolvido por <a href="https://wa.me/5521983421343" target="_blank" rel="noopener">Caio Nunes.</a></p>
             <div class="social-links">
                 <a href="https://www.instagram.com/joaoguimachdo/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
             </div>
