Adicionando novos projetos e atualizando imagens

--- a/index.html
+++ b/index.html
@@ -67,10 +67,19 @@
                     <img src="projeto6.jpg" alt="Projeto 6" class="projeto-img">
                 </div>
                 <div class="projeto-item">
-                    <img src="projeto7.jpg" alt="Projeto 6" class="projeto-img">
+                    <img src="projeto7.jpg" alt="Projeto 7" class="projeto-img">
                 </div>
                 <div class="projeto-item">
-                    <img src="projeto8.jpg" alt="Projeto 6" class="projeto-img">
+                    <img src="projeto8.jpg" alt="Projeto 8" class="projeto-img">
+                </div>
+                <div class="projeto-item">
+                    <img src="projeto9.jpg" alt="Projeto 9" class="projeto-img">
+                </div>
+                <div class="projeto-item">
+                    <img src="projeto10.jpg" alt="Projeto 10" class="projeto-img">
+                </div>
+                <div class="projeto-item">
+                    <img src="projeto11.jpg" alt="Projeto 11" class="projeto-img">
                 </div>
             </div>
         </div>
