--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container-header">
             <nav>
-                <div class="logo">Designer Gráfico</div>
+                <div class="logo"><a href="#home" class="logo-href">Designer Gráfico</a></div>
                 <div class="menu-toggle">
                     <i class="fas fa-bars"></i>
                 </div>
@@ -144,7 +144,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; Desenvolvido por <a href="https://wa.me/5521983421343" target="_blank" rel="noopener">Caio Nunes.</a></p>
+            <p>&copy; Desenvolvido por <a href="https://wa.me/5521983421343" target="_blank" rel="noopener" class="cp-href">Caio Nunes.</a></p>
             <div class="social-links">
                 <a href="https://www.instagram.com/joaoguimachdo/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
             </div>
