favicon and orçamentos included

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfólio - Designer Gráfico</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -19,6 +20,7 @@
                     <li><a href="#home">Início</a></li>
                     <li><a href="#projetos">Projetos</a></li>
                     <li><a href="#about">Sobre</a></li>
+                    <li><a href="#orcamento">Orçamentos</a></li>
                     <li><a href="#contact">Contato</a></li>
                 </ul>
             </nav>
@@ -98,6 +100,86 @@
                 <div class="about-content-text">
                     <p>Olá! Sou um designer gráfico apaixonado por criar soluções visuais impactantes. Trabalho para transformar conceitos em designs memoráveis que contam histórias e conectam marcas com seu público.</p>
                     <p>Minha abordagem combina criatividade, estratégia e atenção aos detalhes para criar trabalhos que não apenas parecem bons, mas também alcançam resultados.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="orcamento" class="orcamento">
+        <div class="container-orcamento">
+            <h2>Orçamentos</h2>
+            <div class="orcamento-content">
+                <div class="orcamento-info">
+                    <div class="orcamento-tipos">
+                        <div class="tipo-projeto">
+                            <h4>Pacote 1</h4>
+                            <div class="preco">R$ 800,00</div>
+                            <p class="descricao">Para quem quer marcar presença nas redes com conteúdo de valor.</p>
+                            <div class="inclui">
+                                <h5>Inclui:</h5>
+                                <ul>
+                                    <li>12 designs personalizados</li>
+                                    <li>5 anúncios segmentados</li>
+                                    <li>Criação do Instagram e Facebook</li>
+                                    <li>Postagens dos designs</li>
+                                    <li>Textos descritivos dos posts</li>
+                                    <li>Textos dos anúncios</li>
+                                </ul>
+                            </div>
+                            <a href="https://wa.me/5521996648164" class="btn btn-contact" target="_blank" rel="noopener">Entre em Contato</a>
+                        </div>
+                        <div class="tipo-projeto">
+                            <h4>Pacote 2</h4>
+                            <div class="preco">R$ 1.000,00</div>
+                            <p class="descricao">Perfeito para quem quer presença constante e anúncios estratégicos.</p>
+                            <div class="inclui">
+                                <h5>Inclui:</h5>
+                                <ul>
+                                    <li>20 designs personalizados</li>
+                                    <li>5 anúncios segmentados</li>
+                                    <li>Criação do Instagram e Facebook</li>
+                                    <li>Criação de catálogo online</li>
+                                    <li>Postagens dos designs</li>
+                                    <li>Textos descritivos dos posts</li>
+                                    <li>Textos dos anúncios</li>
+                                    <li>Relatórios e dashboards de desempenho</li>
+                                </ul>
+                            </div>
+                            <a href="https://wa.me/5521996648164" class="btn btn-contact" target="_blank" rel="noopener">Entre em Contato</a>
+                        </div>
+                        <div class="tipo-projeto">
+                            <h4>Pacote 3</h4>
+                            <div class="preco">R$ 1.500,00</div>
+                            <p class="descricao">Ideal para quem busca presença digital completa.</p>
+                            <div class="inclui">
+                                <h5>Inclui:</h5>
+                                <ul>
+                                    <li>30 designs personalizados (1 post por dia)</li>
+                                    <li>5 anúncios segmentados para seu público</li>
+                                    <li>Criação do Instagram e Facebook</li>
+                                    <li>Criação de catálogo online</li>
+                                    <li>Postagens dos designs</li>
+                                    <li>Textos descritivos dos posts</li>
+                                    <li>Textos dos anúncios</li>
+                                    <li>Relatórios e dashboards de desempenho</li>
+                                    <li>Anúncios em outras plataformas</li>
+                                    <li>Acesso ao portal do cliente</li>
+                                </ul>
+                            </div>
+                            <a href="https://wa.me/5521996648164" class="btn btn-contact" target="_blank" rel="noopener">Entre em Contato</a>
+                        </div>
+                        <div class="tipo-projeto">
+                            <h4>Pacote Personalizado</h4>
+                            <p class="descricao">Caso nenhum dos pacotes atenda exatamente às suas necessidades, posso montar uma proposta sob medida para a sua empresa.</p>
+                            <a href="https://wa.me/5521996648164" class="btn btn-contact" target="_blank" rel="noopener">Entre em Contato</a>
+                        </div>
+                    </div>
+                    <div class="orcamento-info-adicional">
+                        <p>Todos os designs e textos são desenvolvidos com base nas demandas que você me enviar. Envio um formulário para entender melhor o público, os temas que deseja trabalhar e o posicionamento da sua marca. Assim, consigo criar conteúdos alinhados com seus objetivos e também abordar temas relevantes ao seu mercado.</p>
+                        <p>Sobre os anúncios patrocinados, o valor do impulsionamento não está incluso nos pacotes. Esse investimento é definido por você. O custo médio por anúncio é de R$ 10,00 por dia. Após alinharmos o valor a ser investido, envio o Pix para pagamento e damos início à campanha.</p>
+                        <p>Fico à disposição para tirar dúvidas ou ajustar algum detalhe.</p>
+                        <p class="obs">Obs: Todas as postagens que serão feitas, primeiro passam pela aprovação do cliente.</p>
+                    </div>
                 </div>
             </div>
         </div>
